Fix EcosystemTab: font family, spacing

--- a/app/(routes)/ecosystem/thelibertum/theLibertumEcosystem.module.css
+++ b/app/(routes)/ecosystem/thelibertum/theLibertumEcosystem.module.css
@@ -84,6 +84,25 @@
   height: auto;
 }
 
+.tabImage {
+    transform: translateX(-7px);
+}
+
+.tabPara {
+  font-family: var(--font-primary);
+  min-height: 72px;
+  line-height: 24px;
+}
+
+
+.tab {
+  border: 1px solid transparent;
+}
+
+.tab:hover{
+  border: 1px solid #00B3B5;
+}
+
 @media screen and (max-width: 1100px) {
   .container {
     gap: 4rem;
